Etapa4/y.output
Terminals unused in grammar

   TOKEN_ERROR


State 63 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: listaDeDeclaracoes

    2 listaDeDeclaracoes: declaracoes listaDeDeclaracoes
    3                   | %empty

    4 declaracoes: tipo TK_IDENTIFIER '=' literal ';'
    5            | tipo '#' TK_IDENTIFIER ';'
    6            | tipo '#' TK_IDENTIFIER '=' literal ';'
    7            | tipo TK_IDENTIFIER '[' literal ']' inicializacao ';'
    8            | tipo TK_IDENTIFIER '(' listaDeParametros ')' bloco

    9 tipo: KW_CHAR
   10     | KW_INT
   11     | KW_FLOAT

   12 literal: LIT_CHAR
   13        | LIT_INTEGER
   14        | LIT_REAL
   15        | LIT_STRING

   16 inicializacao: ':' inicializacao2
   17              | %empty

   18 inicializacao2: literal inicializacao2
   19               | %empty

   20 listaDeParametros: parametro fimDeParametros

   21 fimDeParametros: ',' parametro fimDeParametros
   22                | %empty

   23 parametro: tipo TK_IDENTIFIER
   24          | %empty

   25 bloco: '{' blocoDeComandos '}'

   26 blocoDeComandos: comando fimDeComando

   27 fimDeComando: ';' comando fimDeComando
   28             | %empty

   29 comando: bloco
   30        | KW_READ TK_IDENTIFIER
   31        | KW_PRINT argprint
   32        | KW_RETURN expressao
   33        | atribuicao
   34        | controleFluxo
   35        | %empty

   36 controleFluxo: KW_IF '(' expressao ')' KW_THEN comando
   37              | KW_WHILE '(' expressao ')' comando
   38              | KW_FOR '(' atribuicao KW_TO expressao ')' comando
   39              | KW_IF '(' expressao ')' KW_THEN comando KW_ELSE comando

   40 atribuicao: TK_IDENTIFIER '=' expressao
   41           | '#' TK_IDENTIFIER '=' expressao
   42           | '&' TK_IDENTIFIER '=' expressao
   43           | TK_IDENTIFIER '[' expressao ']' '=' expressao

   44 argprint: expressao argprint2

   45 argprint2: expressao argprint2
   46          | %empty

   47 expressao: TK_IDENTIFIER
   48          | '#' TK_IDENTIFIER
   49          | '&' TK_IDENTIFIER
   50          | TK_IDENTIFIER '[' expressao ']'
   51          | '(' expressao ')'
   52          | literal
   53          | expressao '+' expressao
   54          | expressao '-' expressao
   55          | expressao '*' expressao
   56          | expressao '/' expressao
   57          | expressao '%' expressao
   58          | expressao '>' expressao
   59          | expressao '<' expressao
   60          | '!' expressao
   61          | expressao OPERATOR_LE expressao
   62          | expressao OPERATOR_GE expressao
   63          | expressao OPERATOR_EQ expressao
   64          | expressao OPERATOR_NE expressao
   65          | expressao OPERATOR_AND expressao
   66          | expressao OPERATOR_OR expressao
   67          | TK_IDENTIFIER '(' listaDeArgumentos ')'

   68 listaDeArgumentos: argfunc fimDeArgumentos

   69 fimDeArgumentos: ',' argfunc fimDeArgumentos
   70                | %empty

   71 argfunc: expressao
   72        | %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 60
'#' (35) 5 6 41 48
'%' (37) 57
'&' (38) 42 49
'(' (40) 8 36 37 38 39 51 67
')' (41) 8 36 37 38 39 51 67
'*' (42) 55
'+' (43) 53
',' (44) 21 69
'-' (45) 54
'/' (47) 56
':' (58) 16
';' (59) 4 5 6 7 27
'<' (60) 59
'=' (61) 4 6 40 41 42 43
'>' (62) 58
'[' (91) 7 43 50
']' (93) 7 43 50
'{' (123) 25
'}' (125) 25
KW_CHAR (256) 9
KW_INT (257) 10
KW_FLOAT (259) 11
KW_IF (261) 36 39
KW_THEN (262) 36 39
KW_ELSE (263) 39
KW_WHILE (264) 37
KW_FOR (265) 38
KW_READ (266) 30
KW_PRINT (267) 31
KW_RETURN (268) 32
KW_TO (269) 38
OPERATOR_LE (270) 61
OPERATOR_GE (271) 62
OPERATOR_EQ (272) 63
OPERATOR_NE (273) 64
OPERATOR_AND (274) 65
OPERATOR_OR (275) 66
TK_IDENTIFIER (280) 4 5 6 7 8 23 30 40 41 42 43 47 48 49 50 67
LIT_INTEGER (281) 13
LIT_REAL (282) 14
LIT_CHAR (283) 12
LIT_STRING (284) 15
TOKEN_ERROR (290)
error (291)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
programa (48)
    on left: 1, on right: 0
listaDeDeclaracoes (49)
    on left: 2 3, on right: 1 2
declaracoes (50)
    on left: 4 5 6 7 8, on right: 2
tipo (51)
    on left: 9 10 11, on right: 4 5 6 7 8 23
literal (52)
    on left: 12 13 14 15, on right: 4 6 7 18 52
inicializacao (53)
    on left: 16 17, on right: 7
inicializacao2 (54)
    on left: 18 19, on right: 16 18
listaDeParametros (55)
    on left: 20, on right: 8
fimDeParametros (56)
    on left: 21 22, on right: 20 21
parametro (57)
    on left: 23 24, on right: 20 21
bloco (58)
    on left: 25, on right: 8 29
blocoDeComandos (59)
    on left: 26, on right: 25
fimDeComando (60)
    on left: 27 28, on right: 26 27
comando (61)
    on left: 29 30 31 32 33 34 35, on right: 26 27 36 37 38 39
controleFluxo (62)
    on left: 36 37 38 39, on right: 34
atribuicao (63)
    on left: 40 41 42 43, on right: 33 38
argprint (64)
    on left: 44, on right: 31
argprint2 (65)
    on left: 45 46, on right: 44 45
expressao (66)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67, on right: 32 36 37 38 39 40 41 42 43 44 45 50 51 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 71
listaDeArgumentos (67)
    on left: 68, on right: 67
fimDeArgumentos (68)
    on left: 69 70, on right: 68 69
argfunc (69)
    on left: 71 72, on right: 68 69


State 0

    0 $accept: . programa $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (listaDeDeclaracoes)

    programa            go to state 4
    listaDeDeclaracoes  go to state 5
    declaracoes         go to state 6
    tipo                go to state 7


State 1

    9 tipo: KW_CHAR .

    $default  reduce using rule 9 (tipo)


State 2

   10 tipo: KW_INT .

    $default  reduce using rule 10 (tipo)


State 3

   11 tipo: KW_FLOAT .

    $default  reduce using rule 11 (tipo)


State 4

    0 $accept: programa . $end

    $end  shift, and go to state 8


State 5

    1 programa: listaDeDeclaracoes .

    $default  reduce using rule 1 (programa)


State 6

    2 listaDeDeclaracoes: declaracoes . listaDeDeclaracoes

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (listaDeDeclaracoes)

    listaDeDeclaracoes  go to state 9
    declaracoes         go to state 6
    tipo                go to state 7


State 7

    4 declaracoes: tipo . TK_IDENTIFIER '=' literal ';'
    5            | tipo . '#' TK_IDENTIFIER ';'
    6            | tipo . '#' TK_IDENTIFIER '=' literal ';'
    7            | tipo . TK_IDENTIFIER '[' literal ']' inicializacao ';'
    8            | tipo . TK_IDENTIFIER '(' listaDeParametros ')' bloco

    TK_IDENTIFIER  shift, and go to state 10
    '#'            shift, and go to state 11


State 8

    0 $accept: programa $end .

    $default  accept


State 9

    2 listaDeDeclaracoes: declaracoes listaDeDeclaracoes .

    $default  reduce using rule 2 (listaDeDeclaracoes)


State 10

    4 declaracoes: tipo TK_IDENTIFIER . '=' literal ';'
    7            | tipo TK_IDENTIFIER . '[' literal ']' inicializacao ';'
    8            | tipo TK_IDENTIFIER . '(' listaDeParametros ')' bloco

    '='  shift, and go to state 12
    '['  shift, and go to state 13
    '('  shift, and go to state 14


State 11

    5 declaracoes: tipo '#' . TK_IDENTIFIER ';'
    6            | tipo '#' . TK_IDENTIFIER '=' literal ';'

    TK_IDENTIFIER  shift, and go to state 15


State 12

    4 declaracoes: tipo TK_IDENTIFIER '=' . literal ';'

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    literal  go to state 20


State 13

    7 declaracoes: tipo TK_IDENTIFIER '[' . literal ']' inicializacao ';'

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    literal  go to state 21


State 14

    8 declaracoes: tipo TK_IDENTIFIER '(' . listaDeParametros ')' bloco

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 24 (parametro)

    tipo               go to state 22
    listaDeParametros  go to state 23
    parametro          go to state 24


State 15

    5 declaracoes: tipo '#' TK_IDENTIFIER . ';'
    6            | tipo '#' TK_IDENTIFIER . '=' literal ';'

    '='  shift, and go to state 25
    ';'  shift, and go to state 26


State 16

   13 literal: LIT_INTEGER .

    $default  reduce using rule 13 (literal)


State 17

   14 literal: LIT_REAL .

    $default  reduce using rule 14 (literal)


State 18

   12 literal: LIT_CHAR .

    $default  reduce using rule 12 (literal)


State 19

   15 literal: LIT_STRING .

    $default  reduce using rule 15 (literal)


State 20

    4 declaracoes: tipo TK_IDENTIFIER '=' literal . ';'

    ';'  shift, and go to state 27


State 21

    7 declaracoes: tipo TK_IDENTIFIER '[' literal . ']' inicializacao ';'

    ']'  shift, and go to state 28


State 22

   23 parametro: tipo . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 29


State 23

    8 declaracoes: tipo TK_IDENTIFIER '(' listaDeParametros . ')' bloco

    ')'  shift, and go to state 30


State 24

   20 listaDeParametros: parametro . fimDeParametros

    ','  shift, and go to state 31

    $default  reduce using rule 22 (fimDeParametros)

    fimDeParametros  go to state 32


State 25

    6 declaracoes: tipo '#' TK_IDENTIFIER '=' . literal ';'

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    literal  go to state 33


State 26

    5 declaracoes: tipo '#' TK_IDENTIFIER ';' .

    $default  reduce using rule 5 (declaracoes)


State 27

    4 declaracoes: tipo TK_IDENTIFIER '=' literal ';' .

    $default  reduce using rule 4 (declaracoes)


State 28

    7 declaracoes: tipo TK_IDENTIFIER '[' literal ']' . inicializacao ';'

    ':'  shift, and go to state 34

    $default  reduce using rule 17 (inicializacao)

    inicializacao  go to state 35


State 29

   23 parametro: tipo TK_IDENTIFIER .

    $default  reduce using rule 23 (parametro)


State 30

    8 declaracoes: tipo TK_IDENTIFIER '(' listaDeParametros ')' . bloco

    '{'  shift, and go to state 36

    bloco  go to state 37


State 31

   21 fimDeParametros: ',' . parametro fimDeParametros

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 24 (parametro)

    tipo       go to state 22
    parametro  go to state 38


State 32

   20 listaDeParametros: parametro fimDeParametros .

    $default  reduce using rule 20 (listaDeParametros)


State 33

    6 declaracoes: tipo '#' TK_IDENTIFIER '=' literal . ';'

    ';'  shift, and go to state 39


State 34

   16 inicializacao: ':' . inicializacao2

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    $default  reduce using rule 19 (inicializacao2)

    literal         go to state 40
    inicializacao2  go to state 41


State 35

    7 declaracoes: tipo TK_IDENTIFIER '[' literal ']' inicializacao . ';'

    ';'  shift, and go to state 42


State 36

   25 bloco: '{' . blocoDeComandos '}'

    KW_IF          shift, and go to state 43
    KW_WHILE       shift, and go to state 44
    KW_FOR         shift, and go to state 45
    KW_READ        shift, and go to state 46
    KW_PRINT       shift, and go to state 47
    KW_RETURN      shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '#'            shift, and go to state 50
    '{'            shift, and go to state 36
    '&'            shift, and go to state 51

    $default  reduce using rule 35 (comando)

    bloco            go to state 52
    blocoDeComandos  go to state 53
    comando          go to state 54
    controleFluxo    go to state 55
    atribuicao       go to state 56


State 37

    8 declaracoes: tipo TK_IDENTIFIER '(' listaDeParametros ')' bloco .

    $default  reduce using rule 8 (declaracoes)


State 38

   21 fimDeParametros: ',' parametro . fimDeParametros

    ','  shift, and go to state 31

    $default  reduce using rule 22 (fimDeParametros)

    fimDeParametros  go to state 57


State 39

    6 declaracoes: tipo '#' TK_IDENTIFIER '=' literal ';' .

    $default  reduce using rule 6 (declaracoes)


State 40

   18 inicializacao2: literal . inicializacao2

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    $default  reduce using rule 19 (inicializacao2)

    literal         go to state 40
    inicializacao2  go to state 58


State 41

   16 inicializacao: ':' inicializacao2 .

    $default  reduce using rule 16 (inicializacao)


State 42

    7 declaracoes: tipo TK_IDENTIFIER '[' literal ']' inicializacao ';' .

    $default  reduce using rule 7 (declaracoes)


State 43

   36 controleFluxo: KW_IF . '(' expressao ')' KW_THEN comando
   39              | KW_IF . '(' expressao ')' KW_THEN comando KW_ELSE comando

    '('  shift, and go to state 59


State 44

   37 controleFluxo: KW_WHILE . '(' expressao ')' comando

    '('  shift, and go to state 60


State 45

   38 controleFluxo: KW_FOR . '(' atribuicao KW_TO expressao ')' comando

    '('  shift, and go to state 61


State 46

   30 comando: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 62


State 47

   31 comando: KW_PRINT . argprint

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    argprint   go to state 69
    expressao  go to state 70


State 48

   32 comando: KW_RETURN . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 71


State 49

   40 atribuicao: TK_IDENTIFIER . '=' expressao
   43           | TK_IDENTIFIER . '[' expressao ']' '=' expressao

    '='  shift, and go to state 72
    '['  shift, and go to state 73


State 50

   41 atribuicao: '#' . TK_IDENTIFIER '=' expressao

    TK_IDENTIFIER  shift, and go to state 74


State 51

   42 atribuicao: '&' . TK_IDENTIFIER '=' expressao

    TK_IDENTIFIER  shift, and go to state 75


State 52

   29 comando: bloco .

    $default  reduce using rule 29 (comando)


State 53

   25 bloco: '{' blocoDeComandos . '}'

    '}'  shift, and go to state 76


State 54

   26 blocoDeComandos: comando . fimDeComando

    ';'  shift, and go to state 77

    $default  reduce using rule 28 (fimDeComando)

    fimDeComando  go to state 78


State 55

   34 comando: controleFluxo .

    $default  reduce using rule 34 (comando)


State 56

   33 comando: atribuicao .

    $default  reduce using rule 33 (comando)


State 57

   21 fimDeParametros: ',' parametro fimDeParametros .

    $default  reduce using rule 21 (fimDeParametros)


State 58

   18 inicializacao2: literal inicializacao2 .

    $default  reduce using rule 18 (inicializacao2)


State 59

   36 controleFluxo: KW_IF '(' . expressao ')' KW_THEN comando
   39              | KW_IF '(' . expressao ')' KW_THEN comando KW_ELSE comando

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 79


State 60

   37 controleFluxo: KW_WHILE '(' . expressao ')' comando

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 80


State 61

   38 controleFluxo: KW_FOR '(' . atribuicao KW_TO expressao ')' comando

    TK_IDENTIFIER  shift, and go to state 49
    '#'            shift, and go to state 50
    '&'            shift, and go to state 51

    atribuicao  go to state 81


State 62

   30 comando: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 30 (comando)


State 63

   47 expressao: TK_IDENTIFIER .
   50          | TK_IDENTIFIER . '[' expressao ']'
   67          | TK_IDENTIFIER . '(' listaDeArgumentos ')'

    '['  shift, and go to state 82
    '('  shift, and go to state 83

    '('       [reduce using rule 47 (expressao)]
    $default  reduce using rule 47 (expressao)


State 64

   60 expressao: '!' . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 84


State 65

   48 expressao: '#' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 85


State 66

   51 expressao: '(' . expressao ')'

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 86


State 67

   49 expressao: '&' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 87


State 68

   52 expressao: literal .

    $default  reduce using rule 52 (expressao)


State 69

   31 comando: KW_PRINT argprint .

    $default  reduce using rule 31 (comando)


State 70

   44 argprint: expressao . argprint2
   53 expressao: expressao . '+' expressao
   54          | expressao . '-' expressao
   55          | expressao . '*' expressao
   56          | expressao . '/' expressao
   57          | expressao . '%' expressao
   58          | expressao . '>' expressao
   59          | expressao . '<' expressao
   61          | expressao . OPERATOR_LE expressao
   62          | expressao . OPERATOR_GE expressao
   63          | expressao . OPERATOR_EQ expressao
   64          | expressao . OPERATOR_NE expressao
   65          | expressao . OPERATOR_AND expressao
   66          | expressao . OPERATOR_OR expressao

    OPERATOR_LE    shift, and go to state 88
    OPERATOR_GE    shift, and go to state 89
    OPERATOR_EQ    shift, and go to state 90
    OPERATOR_NE    shift, and go to state 91
    OPERATOR_AND   shift, and go to state 92
    OPERATOR_OR    shift, and go to state 93
    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '+'            shift, and go to state 94
    '-'            shift, and go to state 95
    '*'            shift, and go to state 96
    '/'            shift, and go to state 97
    '%'            shift, and go to state 98
    '!'            shift, and go to state 64
    '<'            shift, and go to state 99
    '>'            shift, and go to state 100
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    $default  reduce using rule 46 (argprint2)

    literal    go to state 68
    argprint2  go to state 101
    expressao  go to state 102


State 71

   32 comando: KW_RETURN expressao .
   53 expressao: expressao . '+' expressao
   54          | expressao . '-' expressao
   55          | expressao . '*' expressao
   56          | expressao . '/' expressao
   57          | expressao . '%' expressao
   58          | expressao . '>' expressao
   59          | expressao . '<' expressao
   61          | expressao . OPERATOR_LE expressao
   62          | expressao . OPERATOR_GE expressao
   63          | expressao . OPERATOR_EQ expressao
   64          | expressao . OPERATOR_NE expressao
   65          | expressao . OPERATOR_AND expressao
   66          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 88
    OPERATOR_GE   shift, and go to state 89
    OPERATOR_EQ   shift, and go to state 90
    OPERATOR_NE   shift, and go to state 91
    OPERATOR_AND  shift, and go to state 92
    OPERATOR_OR   shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    '*'           shift, and go to state 96
    '/'           shift, and go to state 97
    '%'           shift, and go to state 98
    '<'           shift, and go to state 99
    '>'           shift, and go to state 100

    $default  reduce using rule 32 (comando)


State 72

   40 atribuicao: TK_IDENTIFIER '=' . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 103


State 73

   43 atribuicao: TK_IDENTIFIER '[' . expressao ']' '=' expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 104


State 74

   41 atribuicao: '#' TK_IDENTIFIER . '=' expressao

    '='  shift, and go to state 105


State 75

   42 atribuicao: '&' TK_IDENTIFIER . '=' expressao

    '='  shift, and go to state 106


State 76

   25 bloco: '{' blocoDeComandos '}' .

    $default  reduce using rule 25 (bloco)


State 77

   27 fimDeComando: ';' . comando fimDeComando

    KW_IF          shift, and go to state 43
    KW_WHILE       shift, and go to state 44
    KW_FOR         shift, and go to state 45
    KW_READ        shift, and go to state 46
    KW_PRINT       shift, and go to state 47
    KW_RETURN      shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '#'            shift, and go to state 50
    '{'            shift, and go to state 36
    '&'            shift, and go to state 51

    $default  reduce using rule 35 (comando)

    bloco          go to state 52
    comando        go to state 107
    controleFluxo  go to state 55
    atribuicao     go to state 56


State 78

   26 blocoDeComandos: comando fimDeComando .

    $default  reduce using rule 26 (blocoDeComandos)


State 79

   36 controleFluxo: KW_IF '(' expressao . ')' KW_THEN comando
   39              | KW_IF '(' expressao . ')' KW_THEN comando KW_ELSE comando
   53 expressao: expressao . '+' expressao
   54          | expressao . '-' expressao
   55          | expressao . '*' expressao
   56          | expressao . '/' expressao
   57          | expressao . '%' expressao
   58          | expressao . '>' expressao
   59          | expressao . '<' expressao
   61          | expressao . OPERATOR_LE expressao
   62          | expressao . OPERATOR_GE expressao
   63          | expressao . OPERATOR_EQ expressao
   64          | expressao . OPERATOR_NE expressao
   65          | expressao . OPERATOR_AND expressao
   66          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 88
    OPERATOR_GE   shift, and go to state 89
    OPERATOR_EQ   shift, and go to state 90
    OPERATOR_NE   shift, and go to state 91
    OPERATOR_AND  shift, and go to state 92
    OPERATOR_OR   shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    '*'           shift, and go to state 96
    '/'           shift, and go to state 97
    '%'           shift, and go to state 98
    '<'           shift, and go to state 99
    '>'           shift, and go to state 100
    ')'           shift, and go to state 108


State 80

   37 controleFluxo: KW_WHILE '(' expressao . ')' comando
   53 expressao: expressao . '+' expressao
   54          | expressao . '-' expressao
   55          | expressao . '*' expressao
   56          | expressao . '/' expressao
   57          | expressao . '%' expressao
   58          | expressao . '>' expressao
   59          | expressao . '<' expressao
   61          | expressao . OPERATOR_LE expressao
   62          | expressao . OPERATOR_GE expressao
   63          | expressao . OPERATOR_EQ expressao
   64          | expressao . OPERATOR_NE expressao
   65          | expressao . OPERATOR_AND expressao
   66          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 88
    OPERATOR_GE   shift, and go to state 89
    OPERATOR_EQ   shift, and go to state 90
    OPERATOR_NE   shift, and go to state 91
    OPERATOR_AND  shift, and go to state 92
    OPERATOR_OR   shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    '*'           shift, and go to state 96
    '/'           shift, and go to state 97
    '%'           shift, and go to state 98
    '<'           shift, and go to state 99
    '>'           shift, and go to state 100
    ')'           shift, and go to state 109


State 81

   38 controleFluxo: KW_FOR '(' atribuicao . KW_TO expressao ')' comando

    KW_TO  shift, and go to state 110


State 82

   50 expressao: TK_IDENTIFIER '[' . expressao ']'

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 111


State 83

   67 expressao: TK_IDENTIFIER '(' . listaDeArgumentos ')'

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    $default  reduce using rule 72 (argfunc)

    literal            go to state 68
    expressao          go to state 112
    listaDeArgumentos  go to state 113
    argfunc            go to state 114


State 84

   53 expressao: expressao . '+' expressao
   54          | expressao . '-' expressao
   55          | expressao . '*' expressao
   56          | expressao . '/' expressao
   57          | expressao . '%' expressao
   58          | expressao . '>' expressao
   59          | expressao . '<' expressao
   60          | '!' expressao .
   61          | expressao . OPERATOR_LE expressao
   62          | expressao . OPERATOR_GE expressao
   63          | expressao . OPERATOR_EQ expressao
   64          | expressao . OPERATOR_NE expressao
   65          | expressao . OPERATOR_AND expressao
   66          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 88
    OPERATOR_GE   shift, and go to state 89
    OPERATOR_EQ   shift, and go to state 90
    OPERATOR_NE   shift, and go to state 91
    OPERATOR_AND  shift, and go to state 92
    OPERATOR_OR   shift, and go to state 93

    $default  reduce using rule 60 (expressao)


State 85

   48 expressao: '#' TK_IDENTIFIER .

    $default  reduce using rule 48 (expressao)


State 86

   51 expressao: '(' expressao . ')'
   53          | expressao . '+' expressao
   54          | expressao . '-' expressao
   55          | expressao . '*' expressao
   56          | expressao . '/' expressao
   57          | expressao . '%' expressao
   58          | expressao . '>' expressao
   59          | expressao . '<' expressao
   61          | expressao . OPERATOR_LE expressao
   62          | expressao . OPERATOR_GE expressao
   63          | expressao . OPERATOR_EQ expressao
   64          | expressao . OPERATOR_NE expressao
   65          | expressao . OPERATOR_AND expressao
   66          | expressao . OPERATOR_OR expressao

    OPERATOR_LE   shift, and go to state 88
    OPERATOR_GE   shift, and go to state 89
    OPERATOR_EQ   shift, and go to state 90
    OPERATOR_NE   shift, and go to state 91
    OPERATOR_AND  shift, and go to state 92
    OPERATOR_OR   shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    '*'           shift, and go to state 96
    '/'           shift, and go to state 97
    '%'           shift, and go to state 98
    '<'           shift, and go to state 99
    '>'           shift, and go to state 100
    ')'           shift, and go to state 115


State 87

   49 expressao: '&' TK_IDENTIFIER .

    $default  reduce using rule 49 (expressao)


State 88

   61 expressao: expressao OPERATOR_LE . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 116


State 89

   62 expressao: expressao OPERATOR_GE . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 117


State 90

   63 expressao: expressao OPERATOR_EQ . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 118


State 91

   64 expressao: expressao OPERATOR_NE . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 119


State 92

   65 expressao: expressao OPERATOR_AND . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 120


State 93

   66 expressao: expressao OPERATOR_OR . expressao

    TK_IDENTIFIER  shift, and go to state 63
    LIT_INTEGER    shift, and go to state 16
    LIT_REAL       shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '!'            shift, and go to state 64
    '#'            shift, and go to state 65
    '('            shift, and go to state 66
    '&'            shift, and go to state 67

    literal    go to state 68
    expressao  go to state 121


State 94

   53 expressao: expressao '+' . expressao
